# obs-cinema-channel

./: .bumpversion.cfg  .editorconfig  .env.template  .env.test  CHANGELOG.md  LICENSE  README.md  TODO.md  makefile  pyproject.toml  setup.cfg
cinema_playout/: config.py  library.py  loggerfactory.py  logging.py  tasks.py  telegram.py
cinema_playout/cli/: cli.py  library.py  obs.py  storage.py  utils.py
cinema_playout/database/: session.py
cinema_playout/database/models/: __init__.py  base.py  feature.py  playlist.py  playlist_item.py
cinema_playout/obs/: client.py  exceptions.py  playout.py
tests/: conftest.py  test_cinema_playout_cli.py  test_config.py  test_library.py  test_models.py  utils.py
tests/unit/: test_library_tasks.py
