[tool.poetry]
name = "cinema-playout"
version = "0.1.0"
homepage = "https://github.com/michaeltoohig/cinema-playout"
description = "Cinema channel playout with OBS."
authors = ["Michael Toohig <michaeltoohig@gmail.com>"]
readme = "README.md"
license =  "MIT"

[tool.poetry.dependencies]
python = "^3.7,<4.0"
click = "^8.1.3"
python-dotenv = "^0.20.0"
sqlalchemy = "^1.4.37"
# TODO allow user to select driver
pymssql = "^2.2.5"
black = {version="^22.3.0", optional=true}
isort = {version="^5.8.0", optional=true}
flake8 = {version="^3.9.2", optional=true}
flake8-docstrings = {version="^1.6.0", optional=true}
pytest = {version="^7.1.2", optional=true}
pytest-cov = {version="^2.12.0", optional=true}
bump2version = {version="^1.0.1", optional=true}
simpleobsws = {git = "https://github.com/IRLToolkit/simpleobsws", rev = "simpleobsws-4.x"}
APScheduler = "^3.9.1"
requests = "^2.28.1"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["bump2version"]

[tool.poetry.scripts]
cinema-playout = 'cinema_playout.cli.cli:cli'

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.19.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.pytest.ini_options]
testpaths = ["tests"]
env_override_existing_values = 1
env_files = [
    ".env",
    ".env.test",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"